<resources>
    <string name="app_name">TDDKT</string>
    <string name="more_details">More details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="at">\@</string>
    <string name="select_a_post_to_see_the_comments">Select a post to see the comments</string>
    <string name="posts_title">Posts</string>
    <string name="show_users">Show Users</string>
    <string name="show_latest_posts">Show latest posts</string>
    <string name="close_app">Close app</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">GET STARTED</string>
    <string name="this_is_an_example_of_a_welcome_screen">This is an example of a welcome screen</string>
    <string name="urlImage">"https://api.adorable.io/avatars/285/oh.png"</string>
    <string name="under_development">Sorry! this window is still not supported in landscape at this time</string>
    <string name="label_users">Users</string>
    <string name="posts_label">Posts</string>
    <string name="gallery_label">Gallery</string>
    <string name="image_from_gallery">Image from gallery</string>
</resources>
