<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_users"
            android:enabled="true"
            android:icon="@drawable/ic_users"
            android:title="@string/label_users"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_posts"
            android:enabled="true"
            android:icon="@drawable/ic_posts"
            android:title="@string/posts_label"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_gallery"
            android:enabled="true"
            android:icon="@drawable/ic_image_24px"
            android:title="@string/gallery_label"
            app:showAsAction="ifRoom" />
</menu>