<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:background="@drawable/splash_bg"
                                                   android:layout_height="match_parent"
                                                   tools:context=".SplashActivity">


    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_fileName="welcome.json"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="104dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.477"/>
    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2" android:fontFamily="@font/roboto_medium" android:textSize="30sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/logo"/>
    <TextView
            android:text="@string/this_is_an_example_of_a_welcome_screen"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textSize="14sp"
            android:textColor="@color/white"
    />
    <Button
            android:text="@string/get_started"
            android:layout_width="200dp"
            android:background="@drawable/btn_start"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>